--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -16,10 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.8",
+    "mongoose": "^6.4.0",
     "nanoid": "^3.3.4",
     "node-color-log": "^9.0.0",
+    "nodemon": "^2.0.18",
     "socket.io": "^4.5.1",
     "uuidv4": "^6.2.13"
-  }
+  },
+  "description": ""
 }
